crates/aven-check/tests/fixtures/check/valid/comptime-typeof-direct.av
config = { host: "x", port: 8080 }
T = typeOf(config)
other : T = { host: "z", port: 1 }
