crates/aven-check/tests/fixtures/check/invalid/record-fields.av
missing : { name = Text, age = Int } = { name = "x" }
extra : { name = Text } = { name = "x", extra = 1 }
